--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,18 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
+    "extra": {
+        "installer-paths": {
+            ".git/hooks": ["1stthomas/ht7-git-hooks-base"]
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": "^8.2"
     },
     "require-dev": {
+        "composer/installers": "^2.3",
         "friendsofphp/php-cs-fixer": "^3.64",
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-phpunit": "^2.0",
