--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,7 +6,7 @@ on: [push, pull_request]
 jobs:
   lint:
     # src: https://www.shellcheck.net/wiki/GitHub-Actions
-    name: ShellCheck Analysis
+    name: Lint
     runs-on: ubuntu-latest
     permissions:
       security-events: write  # required for uploading SARIF results
@@ -16,3 +16,5 @@ jobs:
         uses: actions/checkout@v1
       - name: Run ShellCheck with SARIF output
         uses: reactive-firewall/shellcheck-scan@v1
+      - name: Validate composer.json
+        run: composer validate --no-check-publish --strict
