--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,16 +5,12 @@ on: [push, pull_request]
 
 jobs:
   lint:
-    # src: https://www.shellcheck.net/wiki/GitHub-Actions
     name: Lint
     runs-on: ubuntu-latest
-    permissions:
-      security-events: write  # required for uploading SARIF results
-      contents: read
     steps:
       - name: "Checkout ${{ github.repository }}"
         uses: actions/checkout@v1
-      - name: Run ShellCheck with SARIF output
-        uses: reactive-firewall/shellcheck-scan@v1
+      - name: Lint bash scripts
+        uses: Azbagheri/shell-linter@latest
       - name: Validate composer.json
         run: composer validate --no-check-publish --strict
