--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,5 +12,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Lint bash scripts
         uses: Azbagheri/shell-linter@latest
+        with:
+          exclude-paths: "LICENSE"
       - name: Validate composer.json
         run: composer validate --no-check-publish --strict
