#1 add further initial script

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,11 @@
             "pwd",
             "echo 'bin im update'",
             "ls -la"
+        ],
+        "post-update-cmd": [
+            "pwd",
+            "echo 'bin im update'",
+            "ls -la"
         ]
     },
     "support": {
