#1 add coding styles GitHub action for bash scripts

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,5 +14,9 @@ jobs:
         uses: Azbagheri/shell-linter@latest
         with:
           exclude-paths: "LICENSE"
+      - name: Lint bash script conding styles
+        uses: collin-miller/shfmt-action@v1
+        with:
+          with: -d -i 2 -sr -ln=bash .
       - name: Validate composer.json
         run: composer validate --no-check-publish --strict
