--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "bin": [
-        "src/bin/ht7-git-hooks.sh"
+        "src/bin/ht7-git-hooks"
     ],
     "config": {
         "optimize-autoloader": true,
